src/objects/RackRateTableDetail__c.object
<CustomObject>
    <description>Rackrate detail</description>
    <fields>
        <fullName>PriceSetupDate__c</fullName>
        <label>設定日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RoomTypeRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>ラックレート明細</relationshipLabel>
        <relationshipName>RackRateRoomType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>支店ID + &apos;_&apos; + 料金設定日</inlineHelpText>
        <label>SearchKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipName>RackRateTableDetailShop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ラックレート明細</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tier__c</columns>
        <columns>ShopInfoRef__c</columns>
        <columns>PriceSetupDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>ラックレート明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>